# device-stats-api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  locustfile.py  pyproject.toml
app/: main.py
app/api/v1/: devices.py  users.py
app/core/: celery.py  config.py
app/db/: session.py
app/models/: device.py  measurement.py  user.py
app/repositories/: base.py  device.py  measurement.py  user.py
app/schemas/: device.py  measurement.py  stats.py  user.py
app/services/: base.py  device.py  measurement.py  user.py
app/tasks/: analytics.py
core/: config.py
db/: session.py
migrations/: env.py
models/: device.py  measurement.py  user.py
