[tool.poetry]
name = "device-stats-api"
version = "0.1.0"
description = "Device statistics collection and analysis service"
authors = ["levzavadskiy999@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic-settings = "^2.0.0"
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "celery-types (>=0.26.0,<0.27.0)"
]
